--- a/res/layout/activity_choser.xml
+++ b/res/layout/activity_choser.xml
@@ -2,13 +2,13 @@
 <LinearLayout  xmlns:android="http://schemas.android.com/apk/res/android" android:orientation="vertical" android:layout_height="fill_parent" android:layout_width="fill_parent" android:background="@drawable/rack_bg_main">
   <ImageView  android:id="@+id/headerimage" android:layout_width="wrap_content" android:layout_height="75dip"></ImageView>
      <LinearLayout android:layout_weight="1" android:layout_height="300dip" android:layout_width="fill_parent">
-        <LinearLayout android:layout_weight="1" android:layout_height="fill_parent" android:layout_width="fill_parent">
+        <LinearLayout android:layout_weight="1" android:layout_height="wrap_content" android:layout_width="wrap_content">
           <ImageButton android:layout_height="fill_parent"  android:src="@drawable/serverbuttonmed" android:id="@+id/serverbutton" android:background="@android:color/transparent" android:layout_width="fill_parent"></ImageButton>
         </LinearLayout>
-        <LinearLayout android:layout_weight="1" android:layout_height="fill_parent" android:layout_width="fill_parent">
+        <LinearLayout android:layout_weight="1" android:layout_height="wrap_content" android:layout_width="wrap_content">
            <ImageButton android:layout_height="fill_parent" android:src="@drawable/filebuttonmed" android:id="@+id/filesbutton" android:background="@android:color/transparent" android:layout_width="fill_parent"></ImageButton>        
         </LinearLayout>
-        <LinearLayout android:layout_weight="1" android:layout_height="fill_parent" android:layout_width="fill_parent">
+        <LinearLayout android:layout_weight="1" android:layout_height="wrap_content" android:layout_width="wrap_content">
            <ImageButton android:layout_height="fill_parent" android:src="@drawable/lbbuttonmed" android:id="@+id/loadbalancersbutton" android:background="@android:color/transparent" android:layout_width="fill_parent"></ImageButton>
         </LinearLayout>      
     </LinearLayout>
