--- a/res/layout/view_loadbalancer.xml
+++ b/res/layout/view_loadbalancer.xml
@@ -28,7 +28,7 @@
 					<TextView android:layout_width="wrap_content"
 						android:layout_height="wrap_content" android:layout_marginLeft="22dip"
 						android:paddingLeft="5dip" android:text="ID: " android:singleLine="false"
-						android:textStyle="bold" />
+						android:textStyle="bold" android:textColor="#333"/>
 					<TextView android:id="@+id/view_lb_id"
 						android:layout_height="wrap_content" android:layout_width="fill_parent"
 						android:layout_marginRight="30dip" android:scrollHorizontally="true"
@@ -41,7 +41,7 @@
 					<TextView android:layout_width="wrap_content"
 						android:layout_height="wrap_content" android:layout_marginLeft="22dip"
 						android:paddingLeft="5dip" android:text="ID: " android:singleLine="false"
-						android:textStyle="bold" />
+						android:textStyle="bold" android:textColor="#333"/>
 					<TextView android:id="@+id/view_name"
 						android:layout_height="wrap_content" android:layout_width="fill_parent"
 						android:layout_marginRight="30dip" android:scrollHorizontally="true"
@@ -54,7 +54,7 @@
 					<TextView android:layout_width="wrap_content"
 						android:layout_height="wrap_content" android:layout_marginLeft="22dip"
 						android:paddingLeft="5dip" android:text="Protocol: "
-						android:singleLine="false" android:textStyle="bold" />
+						android:singleLine="false" android:textStyle="bold" android:textColor="#333"/>
 					<TextView android:id="@+id/view_protocol"
 						android:layout_height="wrap_content" android:layout_width="fill_parent"
 						android:layout_marginRight="30dip" android:scrollHorizontally="true"
@@ -67,7 +67,7 @@
 					<TextView android:layout_width="wrap_content"
 						android:layout_height="wrap_content" android:layout_marginLeft="22dip"
 						android:paddingLeft="5dip" android:text="Port: "
-						android:singleLine="false" android:textStyle="bold" />
+						android:singleLine="false" android:textStyle="bold" android:textColor="#333"/>
 					<TextView android:id="@+id/view_port"
 						android:layout_height="wrap_content" android:layout_width="fill_parent"
 						android:layout_marginRight="30dip" android:scrollHorizontally="true"
@@ -80,7 +80,7 @@
 					<TextView android:layout_width="wrap_content"
 						android:layout_height="wrap_content" android:layout_marginLeft="22dip"
 						android:paddingLeft="5dip" android:text="Algorithm: "
-						android:singleLine="false" android:textStyle="bold" />
+						android:singleLine="false" android:textStyle="bold" android:textColor="#333"/>
 					<TextView android:id="@+id/view_algorithm"
 						android:layout_height="wrap_content" android:layout_width="fill_parent"
 						android:layout_marginRight="30dip" android:scrollHorizontally="true"
@@ -93,7 +93,7 @@
 					<TextView android:layout_width="wrap_content"
 						android:layout_height="wrap_content" android:layout_marginLeft="22dip"
 						android:paddingLeft="5dip" android:text="Status: "
-						android:singleLine="false" android:textStyle="bold" />
+						android:singleLine="false" android:textStyle="bold" android:textColor="#333"/>
 					<TextView android:id="@+id/view_status"
 						android:layout_height="wrap_content" android:layout_width="fill_parent"
 						android:layout_marginRight="30dip" android:scrollHorizontally="true"
@@ -106,7 +106,7 @@
 					<TextView android:layout_width="wrap_content"
 						android:layout_height="wrap_content" android:layout_marginLeft="22dip"
 						android:paddingLeft="5dip" android:text="Connection Logging: "
-						android:singleLine="false" android:textStyle="bold" />
+						android:singleLine="false" android:textStyle="bold" android:textColor="#333"/>
 					<TextView android:id="@+id/view_islogging"
 						android:layout_height="wrap_content" android:layout_width="fill_parent"
 						android:layout_marginRight="30dip" android:paddingBottom="30dip"
@@ -132,7 +132,7 @@
 					<TextView android:layout_width="wrap_content"
 						android:layout_height="wrap_content" android:layout_marginLeft="22dip"
 						android:paddingLeft="5dip" android:text="ID: " android:singleLine="false"
-						android:textStyle="bold" />
+						android:textStyle="bold" android:textColor="#333"/>
 					<TextView android:id="@+id/view_vip_id"
 						android:layout_height="wrap_content" android:layout_width="fill_parent"
 						android:layout_marginRight="30dip" android:scrollHorizontally="true"
@@ -145,7 +145,7 @@
 					<TextView android:layout_width="wrap_content"
 						android:layout_height="wrap_content" android:layout_marginLeft="22dip"
 						android:paddingLeft="5dip" android:text="IpAddress: "
-						android:singleLine="false" android:textStyle="bold" />
+						android:singleLine="false" android:textStyle="bold" android:textColor="#333"/>
 					<TextView android:id="@+id/view_vip_address"
 						android:layout_height="wrap_content" android:layout_width="fill_parent"
 						android:layout_marginRight="30dip" android:scrollHorizontally="true"
@@ -158,7 +158,7 @@
 					<TextView android:layout_width="wrap_content"
 						android:layout_height="wrap_content" android:layout_marginLeft="22dip"
 						android:paddingLeft="5dip" android:text="IpVersion: "
-						android:singleLine="false" android:textStyle="bold" />
+						android:singleLine="false" android:textStyle="bold" android:textColor="#333"/>
 					<TextView android:id="@+id/view_ipversion"
 						android:layout_height="wrap_content" android:layout_width="fill_parent"
 						android:layout_marginRight="30dip" android:scrollHorizontally="true"
@@ -171,7 +171,7 @@
 					<TextView android:layout_width="wrap_content"
 						android:layout_height="wrap_content" android:layout_marginLeft="22dip"
 						android:paddingLeft="5dip" android:text="Type: "
-						android:singleLine="false" android:textStyle="bold" />
+						android:singleLine="false" android:textStyle="bold" android:textColor="#333"/>
 					<TextView android:id="@+id/view_vip_type"
 						android:layout_height="wrap_content" android:layout_width="fill_parent"
 						android:layout_marginRight="30dip" android:scrollHorizontally="true"
@@ -188,7 +188,7 @@
 					android:layout_marginRight="30dip" android:scrollHorizontally="true"
 					android:gravity="fill_horizontal" android:textSize="20.0sp"
 					android:textColor="#fff" android:layout_marginTop="30dip"
-					android:paddingBottom="10dip" android:text="Nodes" />
+					android:paddingBottom="10dip" android:text="Nodes"/>
 				<!-- ID -->
 				<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
 					android:id="@+id/view_node_id_layout" android:orientation="horizontal"
@@ -196,7 +196,7 @@
 					<TextView android:layout_width="wrap_content"
 						android:layout_height="wrap_content" android:layout_marginLeft="22dip"
 						android:paddingLeft="5dip" android:text="ID: " android:singleLine="false"
-						android:textStyle="bold" />
+						android:textStyle="bold" android:textColor="#333" />
 					<TextView android:id="@+id/view_node_id"
 						android:layout_height="wrap_content" android:layout_width="fill_parent"
 						android:layout_marginRight="30dip" android:scrollHorizontally="true"
@@ -209,7 +209,7 @@
 					<TextView android:layout_width="wrap_content"
 						android:layout_height="wrap_content" android:layout_marginLeft="22dip"
 						android:paddingLeft="5dip" android:text="Address: "
-						android:singleLine="false" android:textStyle="bold" />
+						android:singleLine="false" android:textStyle="bold" android:textColor="#333"/>
 					<TextView android:id="@+id/view_node_address"
 						android:layout_height="wrap_content" android:layout_width="fill_parent"
 						android:layout_marginRight="30dip" android:scrollHorizontally="true"
@@ -222,7 +222,7 @@
 					<TextView android:layout_width="wrap_content"
 						android:layout_height="wrap_content" android:layout_marginLeft="22dip"
 						android:paddingLeft="5dip" android:text="Port: "
-						android:singleLine="false" android:textStyle="bold" />
+						android:singleLine="false" android:textStyle="bold" android:textColor="#333"/>
 					<TextView android:id="@+id/view_node_port"
 						android:layout_height="wrap_content" android:layout_width="fill_parent"
 						android:layout_marginRight="30dip" android:scrollHorizontally="true"
@@ -235,7 +235,7 @@
 					<TextView android:layout_width="wrap_content"
 						android:layout_height="wrap_content" android:layout_marginLeft="22dip"
 						android:paddingLeft="5dip" android:text="Condition: "
-						android:singleLine="false" android:textStyle="bold" />
+						android:singleLine="false" android:textStyle="bold" android:textColor="#333"/>
 					<TextView android:id="@+id/view_node_condition"
 						android:layout_height="wrap_content" android:layout_width="fill_parent"
 						android:layout_marginRight="30dip" android:scrollHorizontally="true"
@@ -248,7 +248,7 @@
 					<TextView android:layout_width="wrap_content"
 						android:layout_height="wrap_content" android:layout_marginLeft="22dip"
 						android:paddingLeft="5dip" android:text="Status: "
-						android:singleLine="false" android:textStyle="bold" />
+						android:singleLine="false" android:textStyle="bold" android:textColor="#333"/>
 					<TextView android:id="@+id/view_node_status"
 						android:layout_height="wrap_content" android:layout_width="fill_parent"
 						android:layout_marginRight="30dip" android:scrollHorizontally="true"
