--- a/res/layout-land/view_loadbalancer.xml
+++ b/res/layout-land/view_loadbalancer.xml
@@ -5,115 +5,42 @@
 	android:background="@drawable/rackbg_land">
 	<ImageView android:id="@+id/headerimage"
 		android:layout_width="wrap_content" android:layout_height="80dip"/>
+	<LinearLayout android:orientation="vertical" android:layout_height="wrap_content" android:background="@drawable/itemsbox_landscape" android:layout_width="fill_parent" android:paddingLeft="5dip" android:id="@+id/view_loadbalancer_layout">
+		<TextView android:text="LoadBalancer" android:textSize="20.0sp" android:gravity="fill_horizontal" android:layout_marginLeft="22dip" android:layout_height="wrap_content" android:scrollHorizontally="true" android:paddingBottom="10dip" android:textColor="#fff" android:layout_marginRight="30dip" android:layout_width="fill_parent" android:layout_marginTop="30dip"></TextView>
+		<LinearLayout android:orientation="horizontal" android:layout_height="wrap_content" android:layout_width="fill_parent" android:id="@+id/view_lb_id_layout">
+			<TextView android:text="ID: " android:layout_marginLeft="22dip" android:singleLine="false" android:layout_height="wrap_content" android:textStyle="bold" android:paddingLeft="5dip" android:layout_width="wrap_content"></TextView>
+			<TextView android:gravity="fill_horizontal" android:id="@+id/view_lb_id" android:layout_height="wrap_content" android:scrollHorizontally="true" android:textColor="#fff" android:layout_marginRight="30dip" android:layout_width="fill_parent"></TextView>
+		</LinearLayout>
+		<LinearLayout android:orientation="horizontal" android:layout_height="wrap_content" android:layout_width="fill_parent" android:id="@+id/view_name_layout">
+			<TextView android:text="ID: " android:layout_marginLeft="22dip" android:singleLine="false" android:layout_height="wrap_content" android:textStyle="bold" android:paddingLeft="5dip" android:layout_width="wrap_content"></TextView>
+			<TextView android:gravity="fill_horizontal" android:id="@+id/view_name" android:layout_height="wrap_content" android:scrollHorizontally="true" android:textColor="#fff" android:layout_marginRight="30dip" android:layout_width="fill_parent"></TextView>
+		</LinearLayout>
+		<LinearLayout android:orientation="horizontal" android:layout_height="wrap_content" android:layout_width="fill_parent" android:id="@+id/view_protocol_layout">
+			<TextView android:text="Protocol: " android:layout_marginLeft="22dip" android:singleLine="false" android:layout_height="wrap_content" android:textStyle="bold" android:paddingLeft="5dip" android:layout_width="wrap_content"></TextView>
+			<TextView android:gravity="fill_horizontal" android:id="@+id/view_protocol" android:layout_height="wrap_content" android:scrollHorizontally="true" android:textColor="#fff" android:layout_marginRight="30dip" android:layout_width="fill_parent"></TextView>
+		</LinearLayout>
+		<LinearLayout android:orientation="horizontal" android:layout_height="wrap_content" android:layout_width="fill_parent" android:id="@+id/view_port_layout">
+			<TextView android:text="Port: " android:layout_marginLeft="22dip" android:singleLine="false" android:layout_height="wrap_content" android:textStyle="bold" android:paddingLeft="5dip" android:layout_width="wrap_content"></TextView>
+			<TextView android:gravity="fill_horizontal" android:id="@+id/view_port" android:layout_height="wrap_content" android:scrollHorizontally="true" android:textColor="#fff" android:layout_marginRight="30dip" android:layout_width="fill_parent"></TextView>
+		</LinearLayout>
+		<LinearLayout android:orientation="horizontal" android:layout_height="wrap_content" android:layout_width="fill_parent" android:id="@+id/view_algorithm_layout">
+			<TextView android:text="Algorithm: " android:layout_marginLeft="22dip" android:singleLine="false" android:layout_height="wrap_content" android:textStyle="bold" android:paddingLeft="5dip" android:layout_width="wrap_content"></TextView>
+			<TextView android:gravity="fill_horizontal" android:id="@+id/view_algorithm" android:layout_height="wrap_content" android:scrollHorizontally="true" android:textColor="#fff" android:layout_marginRight="30dip" android:layout_width="fill_parent"></TextView>
+		</LinearLayout>
+		<LinearLayout android:orientation="horizontal" android:layout_height="wrap_content" android:layout_width="fill_parent" android:id="@+id/view_status_layout">
+			<TextView android:text="Status: " android:layout_marginLeft="22dip" android:singleLine="false" android:layout_height="wrap_content" android:textStyle="bold" android:paddingLeft="5dip" android:layout_width="wrap_content"></TextView>
+			<TextView android:gravity="fill_horizontal" android:id="@+id/view_status" android:layout_height="wrap_content" android:scrollHorizontally="true" android:textColor="#fff" android:layout_marginRight="30dip" android:layout_width="fill_parent"></TextView>
+		</LinearLayout>
+		<LinearLayout android:orientation="horizontal" android:layout_height="wrap_content" android:layout_width="fill_parent" android:id="@+id/view_islogging_layout">
+			<TextView android:text="Connection Logging: " android:layout_marginLeft="22dip" android:singleLine="false" android:layout_height="wrap_content" android:textStyle="bold" android:paddingLeft="5dip" android:layout_width="wrap_content"></TextView>
+			<TextView android:gravity="fill_horizontal" android:id="@+id/view_islogging" android:layout_height="wrap_content" android:scrollHorizontally="true" android:paddingBottom="30dip" android:textColor="#fff" android:layout_marginRight="30dip" android:layout_width="fill_parent"></TextView>
+		</LinearLayout>
+	</LinearLayout>
 	<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
 		android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_weight="1">
 		<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
 			android:id="@+id/view_layout_layout" android:orientation="vertical"
 			android:layout_width="fill_parent" android:layout_height="fill_parent">
-			<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-				android:id="@+id/view_loadbalancer_layout" android:orientation="vertical"
-				android:layout_width="fill_parent" android:layout_height="wrap_content"
-				android:paddingLeft="5dip" android:background="@drawable/itemsbox_landscape">
-				<TextView android:layout_height="wrap_content"
-					android:layout_width="fill_parent" android:layout_marginLeft="22dip"
-					android:layout_marginRight="30dip" android:scrollHorizontally="true"
-					android:gravity="fill_horizontal" android:textSize="20.0sp"
-					android:textColor="#fff" android:layout_marginTop="30dip"
-					android:paddingBottom="10dip" android:text="LoadBalancer" />
-
-				<!-- ID -->
-				<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-					android:id="@+id/view_lb_id_layout" android:orientation="horizontal"
-					android:layout_width="fill_parent" android:layout_height="wrap_content">
-					<TextView android:layout_width="wrap_content"
-						android:layout_height="wrap_content" android:layout_marginLeft="22dip"
-						android:paddingLeft="5dip" android:text="ID: " android:singleLine="false"
-						android:textStyle="bold" />
-					<TextView android:id="@+id/view_lb_id"
-						android:layout_height="wrap_content" android:layout_width="fill_parent"
-						android:layout_marginRight="30dip" android:scrollHorizontally="true"
-						android:gravity="fill_horizontal" android:textColor="#fff" />
-				</LinearLayout>
-				<!-- Name -->
-				<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-					android:id="@+id/view_name_layout" android:orientation="horizontal"
-					android:layout_width="fill_parent" android:layout_height="wrap_content">
-					<TextView android:layout_width="wrap_content"
-						android:layout_height="wrap_content" android:layout_marginLeft="22dip"
-						android:paddingLeft="5dip" android:text="ID: " android:singleLine="false"
-						android:textStyle="bold" />
-					<TextView android:id="@+id/view_name"
-						android:layout_height="wrap_content" android:layout_width="fill_parent"
-						android:layout_marginRight="30dip" android:scrollHorizontally="true"
-						android:gravity="fill_horizontal" android:textColor="#fff" />
-				</LinearLayout>
-				<!-- Protocol -->
-				<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-					android:id="@+id/view_protocol_layout" android:orientation="horizontal"
-					android:layout_width="fill_parent" android:layout_height="wrap_content">
-					<TextView android:layout_width="wrap_content"
-						android:layout_height="wrap_content" android:layout_marginLeft="22dip"
-						android:paddingLeft="5dip" android:text="Protocol: "
-						android:singleLine="false" android:textStyle="bold" />
-					<TextView android:id="@+id/view_protocol"
-						android:layout_height="wrap_content" android:layout_width="fill_parent"
-						android:layout_marginRight="30dip" android:scrollHorizontally="true"
-						android:gravity="fill_horizontal" android:textColor="#fff" />
-				</LinearLayout>
-				<!-- Port -->
-				<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-					android:id="@+id/view_port_layout" android:orientation="horizontal"
-					android:layout_width="fill_parent" android:layout_height="wrap_content">
-					<TextView android:layout_width="wrap_content"
-						android:layout_height="wrap_content" android:layout_marginLeft="22dip"
-						android:paddingLeft="5dip" android:text="Port: "
-						android:singleLine="false" android:textStyle="bold" />
-					<TextView android:id="@+id/view_port"
-						android:layout_height="wrap_content" android:layout_width="fill_parent"
-						android:layout_marginRight="30dip" android:scrollHorizontally="true"
-						android:gravity="fill_horizontal" android:textColor="#fff" />
-				</LinearLayout>
-				<!-- Algorithm -->
-				<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-					android:id="@+id/view_algorithm_layout" android:orientation="horizontal"
-					android:layout_width="fill_parent" android:layout_height="wrap_content">
-					<TextView android:layout_width="wrap_content"
-						android:layout_height="wrap_content" android:layout_marginLeft="22dip"
-						android:paddingLeft="5dip" android:text="Algorithm: "
-						android:singleLine="false" android:textStyle="bold" />
-					<TextView android:id="@+id/view_algorithm"
-						android:layout_height="wrap_content" android:layout_width="fill_parent"
-						android:layout_marginRight="30dip" android:scrollHorizontally="true"
-						android:gravity="fill_horizontal" android:textColor="#fff" />
-				</LinearLayout>
-				<!-- Status -->
-				<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-					android:id="@+id/view_status_layout" android:orientation="horizontal"
-					android:layout_width="fill_parent" android:layout_height="wrap_content">
-					<TextView android:layout_width="wrap_content"
-						android:layout_height="wrap_content" android:layout_marginLeft="22dip"
-						android:paddingLeft="5dip" android:text="Status: "
-						android:singleLine="false" android:textStyle="bold" />
-					<TextView android:id="@+id/view_status"
-						android:layout_height="wrap_content" android:layout_width="fill_parent"
-						android:layout_marginRight="30dip" android:scrollHorizontally="true"
-						android:gravity="fill_horizontal" android:textColor="#fff" />
-				</LinearLayout>
-				<!-- ConnectionLogging -->
-				<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-					android:id="@+id/view_islogging_layout" android:orientation="horizontal"
-					android:layout_width="fill_parent" android:layout_height="wrap_content">
-					<TextView android:layout_width="wrap_content"
-						android:layout_height="wrap_content" android:layout_marginLeft="22dip"
-						android:paddingLeft="5dip" android:text="Connection Logging: "
-						android:singleLine="false" android:textStyle="bold" />
-					<TextView android:id="@+id/view_islogging"
-						android:layout_height="wrap_content" android:layout_width="fill_parent"
-						android:layout_marginRight="30dip" android:paddingBottom="30dip"
-						android:scrollHorizontally="true" android:gravity="fill_horizontal"
-						android:textColor="#fff" />
-				</LinearLayout>
-			</LinearLayout>
 			<!-- VirtualIps -->
 			<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
 				android:id="@+id/view_loadbalancer_layout" android:orientation="vertical"
