--- a/res/layout/addnodes.xml
+++ b/res/layout/addnodes.xml
@@ -4,12 +4,23 @@
 	android:layout_height="fill_parent" android:background="@drawable/rack_bg_transparent">
 	<ImageView android:id="@+id/headerimage"
 		android:layout_width="wrap_content" android:layout_height="80dip"></ImageView>
-	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-		android:layout_width="fill_parent" android:layout_height="fill_parent">
-		<ListView android:id="@+id/android:list"
-			android:layout_width="fill_parent" android:cacheColorHint="@android:color/transparent"
-			android:layout_height="417dp" />
-	</LinearLayout>
+	<RelativeLayout android:layout_width="fill_parent"
+		android:id="@+id/nodes_relative" android:layout_height="fill_parent">
+		<ScrollView android:layout_height="wrap_content"
+			android:orientation="vertical" android:layout_width="wrap_content"
+			android:id="@+id/node_scroll" android:layout_above="@+id/submit_nodes_button">
+			<LinearLayout android:layout_width="fill_parent"
+				android:id="@+id/nodes_linear_layout" android:layout_height="fill_parent">
+				<ListView android:layout_weight="1" android:layout_width="fill_parent"
+					android:cacheColorHint="@android:color/transparent"
+					android:layout_height="417dp" android:id="@android:id/list"></ListView>
+			</LinearLayout>
+		</ScrollView>
+		<Button android:layout_height="wrap_content" android:layout_alignParentBottom="true"
+			android:layout_centerInParent="true" android:layout_marginBottom="15dip"
+			android:layout_width="120dp" android:text="Add Nodes"
+			android:layout_marginTop="5dip" android:id="@+id/submit_nodes_button"></Button>
+	</RelativeLayout>
 	<ImageView android:id="@+id/headerimage"
 		android:layout_width="wrap_content" android:layout_height="25dip"></ImageView>
 </LinearLayout>
