--- a/res/layout/addnodes.xml
+++ b/res/layout/addnodes.xml
@@ -1,9 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
 	android:orientation="vertical" android:layout_width="fill_parent"
-	android:layout_height="fill_parent" android:background="@drawable/rack_bg_transparent">
-	<ImageView android:id="@+id/headerimage"
-		android:layout_width="wrap_content" android:layout_height="80dip"></ImageView>
+	android:layout_height="fill_parent">
 	<RelativeLayout android:layout_width="fill_parent"
 		android:id="@+id/nodes_relative" android:layout_height="fill_parent">
 		<ScrollView android:layout_height="wrap_content"
@@ -21,8 +19,6 @@
 			android:layout_width="120dp" android:text="Add Nodes"
 			android:layout_marginTop="5dip" android:id="@+id/submit_nodes_button"></Button>
 	</RelativeLayout>
-	<ImageView android:id="@+id/headerimage"
-		android:layout_width="wrap_content" android:layout_height="25dip"></ImageView>
 </LinearLayout>
 
   
