--- a/res/layout/list_servers.xml
+++ b/res/layout/list_servers.xml
@@ -1,16 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
 	android:orientation="vertical" android:layout_width="fill_parent"
-	android:layout_height="fill_parent" android:background="@drawable/rack_bg_transparent">
-	<ImageView android:id="@+id/headerimage"
-		android:layout_width="wrap_content" android:layout_height="80dip"></ImageView>
+	android:layout_height="fill_parent">
 	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
 		android:layout_width="fill_parent" android:layout_height="fill_parent">
 		<ListView android:id="@+id/android:list"
 			android:layout_width="fill_parent" android:cacheColorHint="@android:color/transparent" android:layout_height="417dp"/>
 	</LinearLayout>
-	<ImageView android:id="@+id/headerimage"
-		android:layout_width="wrap_content" android:layout_height="25dip"></ImageView>
 </LinearLayout>
 
   
