--- a/res/layout/listcontainerscell.xml
+++ b/res/layout/listcontainerscell.xml
@@ -9,13 +9,13 @@
 		<TableRow>
 			<TextView android:id="@+id/label" android:layout_width="wrap_content"
 				android:layout_height="wrap_content" android:layout_marginTop="5px"
-				android:textColor="#000" android:textSize="24sp" />
+				android:textColor="#FFFFFF" android:textSize="24sp" />
 		</TableRow>
 
 		<TableRow>
 			<TextView android:id="@+id/sublabel" android:layout_width="wrap_content"
 				android:layout_height="wrap_content" android:layout_marginTop="0px"
-				android:textColor="#000" android:text="Containers"
+				android:textColor="#FFFFFF" android:text="Containers"
 				android:textSize="12sp" />
 		</TableRow>
 	</TableLayout>
