--- a/res/layout/view_add_loadbalancer.xml
+++ b/res/layout/view_add_loadbalancer.xml
@@ -1,116 +1,44 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
 	android:id="@+id/view_loadbalncer_layout" android:orientation="vertical"
-	android:layout_width="fill_parent" android:layout_height="fill_parent"
-	android:background="@drawable/rack_bg_transparent">
-	<ImageView android:id="@+id/headerimage"
-		android:layout_width="wrap_content" android:layout_height="80dip" />
+	android:layout_width="fill_parent" android:layout_height="fill_parent" android:weightSum="1">
 	<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-		android:layout_width="fill_parent" android:layout_height="wrap_content"
-		android:layout_marginBottom="75dip">
-		<TableLayout android:background="@drawable/itemsbox"
-			android:layout_width="fill_parent" android:paddingBottom="30dip"
-			android:id="@+id/view_loadbalancer_layout" android:paddingLeft="5dip"
-			android:layout_height="418dip">
-			<TextView android:layout_width="fill_parent"
-				android:layout_marginTop="30dip" android:layout_marginRight="30dip"
-				android:layout_height="wrap_content" android:scrollHorizontally="true"
-				android:layout_marginBottom="10dip" android:paddingTop="10dip"
-				android:text="LoadBalancer" android:gravity="fill_horizontal"
-				android:layout_marginLeft="22dip" android:textSize="20.0sp"
-				android:textColor="#fff"></TextView>
-			<TableRow android:layout_width="fill_parent"
-				android:layout_height="wrap_content" android:id="@+id/edit_lb_name_layout"
-				android:orientation="horizontal">
-				<TextView android:layout_marginLeft="22dip"
-					android:textStyle="bold" android:singleLine="false"
-					android:layout_height="wrap_content" android:paddingLeft="5dip"
-					android:layout_gravity="center_vertical" android:text="Name"
-					android:layout_width="wrap_content" android:textColor="#333"></TextView>
-				<EditText android:layout_height="wrap_content" android:id="@+id/edit_lb_name_text"
-					android:layout_weight="1" android:layout_marginRight="20dip"
-					android:layout_width="wrap_content">
-					<requestFocus></requestFocus>
-				</EditText>
-			</TableRow>
-			<TableRow android:layout_width="fill_parent"
-				android:layout_height="wrap_content" android:id="@+id/edit_protocol_layout"
-				android:orientation="horizontal">
-				<TextView android:layout_marginLeft="22dip"
-					android:textStyle="bold" android:singleLine="false"
-					android:layout_height="wrap_content" android:paddingLeft="5dip"
-					android:layout_gravity="center_vertical" android:text="Protocol"
-					android:layout_width="wrap_content" android:textColor="#333"></TextView>
-				<Spinner android:id="@+id/edit_protocol_spinner"
-					android:layout_weight="1" android:layout_height="wrap_content"
-					android:layout_marginRight="20dip" android:layout_width="wrap_content"></Spinner>
-			</TableRow>
-			<TableRow android:layout_width="fill_parent"
-				android:layout_height="wrap_content" android:id="@+id/edit_port_layout"
-				android:orientation="horizontal">
-				<TextView android:layout_marginLeft="22dip"
-					android:textStyle="bold" android:singleLine="false"
-					android:layout_height="wrap_content" android:paddingLeft="5dip"
-					android:layout_gravity="center_vertical" android:text="Port"
-					android:layout_width="wrap_content" android:textColor="#333"></TextView>
-				<EditText android:inputType="number" android:layout_height="wrap_content"
-					android:id="@+id/edit_port_text" android:layout_weight="1"
-					android:layout_marginRight="20dip" android:layout_width="fill_parent"></EditText>
-			</TableRow>
-			<TableRow android:layout_width="fill_parent"
-				android:layout_height="wrap_content" android:id="@+id/edit_vip_layout"
-				android:orientation="horizontal">
-				<TextView android:layout_marginLeft="22dip"
-					android:textStyle="bold" android:singleLine="false"
-					android:layout_height="wrap_content" android:paddingLeft="5dip"
-					android:layout_gravity="center_vertical" android:text="@string/virtual_ip_type"
-					android:layout_width="wrap_content" android:textColor="#333"></TextView>
-				<Spinner android:id="@+id/edit_vip_spinner"
-					android:layout_weight="1" android:layout_height="wrap_content"
-					android:layout_marginRight="20dip" android:layout_width="wrap_content"></Spinner>
-			</TableRow>
-			<TableRow android:layout_width="fill_parent"
-				android:layout_height="wrap_content" android:id="@+id/edit_algorithm_layout"
-				android:orientation="horizontal">
-				<TextView android:layout_marginLeft="22dip"
-					android:textStyle="bold" android:singleLine="false"
-					android:layout_height="wrap_content" android:paddingLeft="5dip"
-					android:layout_gravity="center_vertical" android:text="Algorithm"
-					android:layout_width="wrap_content" android:textColor="#333"></TextView>
-				<Spinner android:id="@+id/edit_algorithm_spinner"
-					android:layout_weight="1" android:layout_height="wrap_content"
-					android:layout_marginRight="20dip" android:layout_width="wrap_content"></Spinner>
-			</TableRow>
-			<TableRow android:layout_width="fill_parent"
-				android:layout_height="wrap_content" android:id="@+id/edit_region_layout"
-				android:orientation="horizontal">
-				<TextView android:layout_marginLeft="22dip"
-					android:textStyle="bold" android:singleLine="false"
-					android:layout_height="wrap_content" android:paddingLeft="5dip"
-					android:layout_gravity="center_vertical" android:text="Region"
-					android:layout_width="wrap_content" android:textColor="#333"></TextView>
-				<Spinner android:id="@+id/edit_region_spinner"
-					android:layout_weight="1" android:layout_height="wrap_content"
-					android:layout_marginRight="20dip" android:layout_width="wrap_content"></Spinner>
-			</TableRow>
-			<TableRow android:layout_width="fill_parent"
-				android:layout_height="wrap_content" android:id="@+id/edit_nodes_layout"
-				android:orientation="horizontal">
-				<TextView android:layout_marginLeft="22dip"
-					android:textStyle="bold" android:singleLine="false"
-					android:layout_height="wrap_content" android:paddingLeft="5dip"
-					android:layout_gravity="center_vertical" android:text="Nodes"
-					android:layout_width="wrap_content" android:textColor="#333"></TextView>
-				<Button android:layout_height="wrap_content"
-					android:layout_weight="1" android:text="Edit Nodes"
-					android:layout_marginRight="20dip" android:layout_width="wrap_content"
-					android:id="@+id/add_nodes_button"></Button>
-			</TableRow>
-		</TableLayout>
+		android:layout_width="fill_parent" android:layout_height="fill_parent">
+		<LinearLayout android:layout_width="fill_parent" android:id="@+id/linearLayout1" android:layout_height="wrap_content" android:orientation="vertical">
+			<TableLayout android:paddingLeft="5dip" android:layout_width="fill_parent" android:id="@+id/view_loadbalancer_layout" android:paddingBottom="30dip" android:layout_height="fill_parent">
+				<TextView android:layout_marginBottom="10dip" android:scrollHorizontally="true" android:textSize="20.0sp" android:layout_marginLeft="22dip" android:layout_height="wrap_content" android:gravity="fill_horizontal" android:layout_width="fill_parent" android:layout_marginTop="10dip" android:layout_marginRight="30dip" android:textColor="#fff" android:text="LoadBalancer"></TextView>
+				<TableRow android:orientation="horizontal" android:layout_height="wrap_content" android:id="@+id/edit_lb_name_layout" android:layout_width="fill_parent">
+					<TextView android:paddingLeft="5dip" android:layout_gravity="center_vertical" android:layout_height="wrap_content" android:layout_width="wrap_content" android:textStyle="bold" android:singleLine="false" android:layout_marginLeft="22dip" android:textColor="#333" android:text="Name"></TextView>
+					<EditText android:layout_height="wrap_content" android:layout_width="wrap_content" android:layout_weight="1" android:id="@+id/edit_lb_name_text" android:layout_marginRight="20dip">
+						<requestFocus></requestFocus>
+					</EditText>
+				</TableRow>
+				<TableRow android:orientation="horizontal" android:layout_height="wrap_content" android:id="@+id/edit_protocol_layout" android:layout_width="fill_parent">
+					<TextView android:paddingLeft="5dip" android:layout_gravity="center_vertical" android:layout_height="wrap_content" android:layout_width="wrap_content" android:textStyle="bold" android:singleLine="false" android:layout_marginLeft="22dip" android:textColor="#333" android:text="Protocol"></TextView>
+					<Spinner android:layout_height="wrap_content" android:layout_width="wrap_content" android:layout_weight="1" android:layout_marginRight="20dip" android:id="@+id/edit_protocol_spinner"></Spinner>
+				</TableRow>
+				<TableRow android:orientation="horizontal" android:layout_height="wrap_content" android:id="@+id/edit_port_layout" android:layout_width="fill_parent">
+					<TextView android:paddingLeft="5dip" android:layout_gravity="center_vertical" android:layout_height="wrap_content" android:layout_width="wrap_content" android:textStyle="bold" android:singleLine="false" android:layout_marginLeft="22dip" android:textColor="#333" android:text="Port"></TextView>
+					<EditText android:layout_height="wrap_content" android:layout_width="fill_parent" android:inputType="number" android:layout_weight="1" android:id="@+id/edit_port_text" android:layout_marginRight="20dip"></EditText>
+				</TableRow>
+				<TableRow android:orientation="horizontal" android:layout_height="wrap_content" android:id="@+id/edit_vip_layout" android:layout_width="fill_parent">
+					<TextView android:paddingLeft="5dip" android:layout_gravity="center_vertical" android:layout_height="wrap_content" android:layout_width="wrap_content" android:textStyle="bold" android:singleLine="false" android:layout_marginLeft="22dip" android:textColor="#333" android:text="@string/virtual_ip_type"></TextView>
+					<Spinner android:layout_height="wrap_content" android:layout_width="wrap_content" android:layout_weight="1" android:layout_marginRight="20dip" android:id="@+id/edit_vip_spinner"></Spinner>
+				</TableRow>
+				<TableRow android:orientation="horizontal" android:layout_height="wrap_content" android:id="@+id/edit_algorithm_layout" android:layout_width="fill_parent">
+					<TextView android:paddingLeft="5dip" android:layout_gravity="center_vertical" android:layout_height="wrap_content" android:layout_width="wrap_content" android:textStyle="bold" android:singleLine="false" android:layout_marginLeft="22dip" android:textColor="#333" android:text="Algorithm"></TextView>
+					<Spinner android:layout_height="wrap_content" android:layout_width="wrap_content" android:layout_weight="1" android:layout_marginRight="20dip" android:id="@+id/edit_algorithm_spinner"></Spinner>
+				</TableRow>
+				<TableRow android:orientation="horizontal" android:layout_height="wrap_content" android:id="@+id/edit_region_layout" android:layout_width="fill_parent">
+					<TextView android:paddingLeft="5dip" android:layout_gravity="center_vertical" android:layout_height="wrap_content" android:layout_width="wrap_content" android:textStyle="bold" android:singleLine="false" android:layout_marginLeft="22dip" android:textColor="#333" android:text="Region"></TextView>
+					<Spinner android:layout_height="wrap_content" android:layout_width="wrap_content" android:layout_weight="1" android:layout_marginRight="20dip" android:id="@+id/edit_region_spinner"></Spinner>
+				</TableRow>
+				<TableRow android:orientation="horizontal" android:layout_height="wrap_content" android:id="@+id/edit_nodes_layout" android:layout_width="fill_parent">
+					<TextView android:paddingLeft="5dip" android:layout_gravity="center_vertical" android:layout_height="wrap_content" android:layout_width="wrap_content" android:textStyle="bold" android:singleLine="false" android:layout_marginLeft="22dip" android:textColor="#333" android:text="Nodes"></TextView>
+					<Button android:layout_height="wrap_content" android:text="Edit Nodes" android:layout_width="wrap_content" android:id="@+id/add_nodes_button" android:layout_weight="1" android:layout_marginRight="20dip"></Button>
+				</TableRow>
+			</TableLayout>
+			<Button android:layout_gravity="center" android:text="Add Load Balancer" android:layout_width="wrap_content" android:id="@+id/add_lb_button" android:layout_height="wrap_content"></Button>
+		</LinearLayout>
 	</ScrollView>
-	<Button android:layout_width="wrap_content" android:text="Add Load Balancer"
-		android:layout_height="wrap_content" android:layout_gravity="center"
-		android:layout_marginTop="-70dip" android:id="@+id/add_lb_button"></Button>
-	<ImageView android:id="@+id/footerimage"
-		android:layout_width="wrap_content" android:layout_height="25dip" />
 </LinearLayout>
