--- a/res/layout/updateloadbalancer.xml
+++ b/res/layout/updateloadbalancer.xml
@@ -13,7 +13,7 @@
 					android:textStyle="bold" android:singleLine="false"
 					android:layout_height="wrap_content" android:paddingLeft="5dip"
 					android:layout_gravity="center_vertical" android:text="Name"
-					android:layout_width="wrap_content" android:textColor="#333"></TextView>
+					android:layout_width="wrap_content"></TextView>
 				<EditText android:layout_height="wrap_content" android:layout_weight="1" android:layout_marginRight="20dip"
 					android:layout_width="wrap_content" android:id="@+id/edit_lb_name_text">
 					<requestFocus></requestFocus>
@@ -26,7 +26,7 @@
 					android:textStyle="bold" android:singleLine="false"
 					android:layout_height="wrap_content" android:paddingLeft="5dip"
 					android:layout_gravity="center_vertical" android:text="Protocol"
-					android:layout_width="wrap_content" android:textColor="#333"></TextView>
+					android:layout_width="wrap_content"></TextView>
 				<Spinner android:id="@+id/edit_protocol_spinner"
 					android:layout_weight="1" android:layout_height="wrap_content"
 					android:layout_marginRight="20dip" android:layout_width="wrap_content"></Spinner>
@@ -38,7 +38,7 @@
 					android:textStyle="bold" android:singleLine="false"
 					android:layout_height="wrap_content" android:paddingLeft="5dip"
 					android:layout_gravity="center_vertical" android:text="Port"
-					android:layout_width="wrap_content" android:textColor="#333"></TextView>
+					android:layout_width="wrap_content"></TextView>
 				<EditText android:inputType="number" android:layout_height="wrap_content"
 					android:id="@+id/edit_port_text" android:layout_weight="1"
 					android:layout_marginRight="20dip" android:layout_width="fill_parent"></EditText>
@@ -50,7 +50,7 @@
 					android:textStyle="bold" android:singleLine="false"
 					android:layout_height="wrap_content" android:paddingLeft="5dip"
 					android:layout_gravity="center_vertical" android:text="Algorithm"
-					android:layout_width="wrap_content" android:textColor="#333"></TextView>
+					android:layout_width="wrap_content"></TextView>
 				<Spinner android:layout_weight="1" android:layout_height="wrap_content"
 					android:layout_marginRight="20dip" android:layout_width="wrap_content" android:id="@+id/edit_algorithm_spinner"></Spinner>
 			</TableRow>
