--- a/res/layout/view_loadbalancer.xml
+++ b/res/layout/view_loadbalancer.xml
@@ -18,7 +18,7 @@
 					<TextView android:layout_width="wrap_content"
 						android:layout_height="wrap_content" android:layout_marginLeft="22dip"
 						android:paddingLeft="5dip" android:text="ID: " android:singleLine="false"
-						android:textStyle="bold" android:textColor="#333" android:id="@+id/id_label"/>
+						android:textStyle="bold" android:id="@+id/id_label"/>
 					<TextView android:id="@+id/view_lb_id"
 						android:layout_height="wrap_content" android:layout_width="fill_parent"
 						android:layout_marginRight="30dip" android:scrollHorizontally="true"
@@ -30,7 +30,7 @@
 					<TextView android:layout_width="wrap_content"
 						android:layout_height="wrap_content" android:layout_marginLeft="22dip"
 						android:paddingLeft="5dip" android:singleLine="false"
-						android:textStyle="bold" android:textColor="#333" android:text="Name: "/>
+						android:textStyle="bold" android:text="Name: " android:typeface="normal"/>
 					<TextView android:id="@+id/view_name"
 						android:layout_height="wrap_content" android:layout_width="fill_parent"
 						android:layout_marginRight="30dip" android:scrollHorizontally="true"
@@ -42,8 +42,7 @@
 					<TextView android:layout_width="wrap_content"
 						android:layout_height="wrap_content" android:layout_marginLeft="22dip"
 						android:paddingLeft="5dip" android:text="Protocol: "
-						android:singleLine="false" android:textStyle="bold"
-						android:textColor="#333" />
+						android:singleLine="false" android:textStyle="bold"/>
 					<TextView android:id="@+id/view_protocol"
 						android:layout_height="wrap_content" android:layout_width="fill_parent"
 						android:layout_marginRight="30dip" android:scrollHorizontally="true"
@@ -55,8 +54,7 @@
 					<TextView android:layout_width="wrap_content"
 						android:layout_height="wrap_content" android:layout_marginLeft="22dip"
 						android:paddingLeft="5dip" android:text="Port: "
-						android:singleLine="false" android:textStyle="bold"
-						android:textColor="#333" />
+						android:singleLine="false" android:textStyle="bold"/>
 					<TextView android:id="@+id/view_port"
 						android:layout_height="wrap_content" android:layout_width="fill_parent"
 						android:layout_marginRight="30dip" android:scrollHorizontally="true"
@@ -68,8 +66,7 @@
 					<TextView android:layout_width="wrap_content"
 						android:layout_height="wrap_content" android:layout_marginLeft="22dip"
 						android:paddingLeft="5dip" android:text="Algorithm: "
-						android:singleLine="false" android:textStyle="bold"
-						android:textColor="#333" />
+						android:singleLine="false" android:textStyle="bold"/>
 					<TextView android:id="@+id/view_algorithm"
 						android:layout_height="wrap_content" android:layout_width="fill_parent"
 						android:layout_marginRight="30dip" android:scrollHorizontally="true"
@@ -81,8 +78,7 @@
 					<TextView android:layout_width="wrap_content"
 						android:layout_height="wrap_content" android:layout_marginLeft="22dip"
 						android:paddingLeft="5dip" android:text="Status: "
-						android:singleLine="false" android:textStyle="bold"
-						android:textColor="#333" />
+						android:singleLine="false" android:textStyle="bold"/>
 					<TextView android:id="@+id/view_status"
 						android:layout_height="wrap_content" android:layout_width="fill_parent"
 						android:layout_marginRight="30dip" android:scrollHorizontally="true"
@@ -95,7 +91,7 @@
 						android:layout_height="wrap_content" android:layout_marginLeft="22dip"
 						android:paddingLeft="5dip" android:text="Connection Logging: "
 						android:singleLine="false" android:textStyle="bold"
-						android:textColor="#333" android:id="@+id/connection_logging"/>
+						android:id="@+id/connection_logging"/>
 					<TextView android:id="@+id/view_islogging"
 						android:layout_height="wrap_content" android:layout_width="fill_parent"
 						android:layout_marginRight="30dip" android:scrollHorizontally="true" android:gravity="fill_horizontal"
@@ -107,7 +103,7 @@
 				android:id="@+id/view_loadbalancer_layout" android:orientation="vertical"
 				android:layout_width="fill_parent" android:layout_height="wrap_content"
 				android:paddingLeft="5dip">
-				<TextView android:singleLine="false" android:textColor="#333" android:paddingLeft="5dip" android:id="@+id/TextView01" android:layout_width="wrap_content" android:layout_marginLeft="22dip" android:layout_height="wrap_content" android:textStyle="bold" android:text="Virtual IPs"></TextView>
+				<TextView android:singleLine="false" android:paddingLeft="5dip" android:id="@+id/TextView01" android:layout_width="wrap_content" android:layout_marginLeft="22dip" android:layout_height="wrap_content" android:textStyle="bold" android:text="Virtual IPs"></TextView>
 				<!-- ID -->
 				<!-- Ip Address -->
 				<!-- IpVersion -->
@@ -121,7 +117,7 @@
 				android:id="@+id/view_loadbalancer_layout" android:orientation="vertical"
 				android:layout_width="fill_parent" android:layout_height="wrap_content"
 				android:paddingLeft="5dip">
-				<TextView android:singleLine="false" android:textColor="#333" android:paddingLeft="5dip" android:layout_width="wrap_content" android:layout_marginLeft="22dip" android:layout_height="wrap_content" android:textStyle="bold" android:text="Node IPs" android:id="@+id/TextView02"></TextView>
+				<TextView android:singleLine="false" android:paddingLeft="5dip" android:layout_width="wrap_content" android:layout_marginLeft="22dip" android:layout_height="wrap_content" android:textStyle="bold" android:text="Node IPs" android:id="@+id/TextView02"></TextView>
 				<!-- ID -->
 				<!-- Address -->
 				<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
