--- a/res/layout/editnodes.xml
+++ b/res/layout/editnodes.xml
@@ -4,7 +4,7 @@
 	android:layout_height="fill_parent">
 	<RelativeLayout android:layout_width="fill_parent"
 		android:id="@+id/nodes_relative" android:layout_height="fill_parent">
-		<LinearLayout android:layout_height="fill_parent" android:layout_width="fill_parent" android:id="@+id/nodes_linear_layout">
+		<LinearLayout android:layout_height="fill_parent" android:layout_width="fill_parent" android:id="@+id/nodes_linear_layout" android:layout_above="@+id/linearLayout1">
 			<ListView android:layout_width="fill_parent" android:layout_weight="1" android:id="@android:id/list" android:cacheColorHint="@android:color/transparent" android:layout_height="fill_parent"></ListView>
 		</LinearLayout>
 		<LinearLayout android:id="@+id/linearLayout1"
