added access control to load balancers

--- a/res/layout/view_loadbalancer.xml
+++ b/res/layout/view_loadbalancer.xml
@@ -136,9 +136,12 @@
 				<Button android:layout_gravity="left" android:layout_width="130dip" android:layout_marginLeft="20dip" android:layout_height="wrap_content" android:id="@+id/edit_nodes_button" android:text="Edit Nodes" android:layout_marginTop="10dip"></Button>
 				<Button android:layout_height="wrap_content" android:layout_marginTop="10dip" android:layout_marginLeft="10dip" android:layout_width="130dip" android:layout_gravity="left" android:text="Log Connections" android:id="@+id/connection_log_button"></Button>
 			</LinearLayout>
-			<LinearLayout android:layout_height="fill_parent" android:layout_width="fill_parent" android:id="@+id/load_balancer_button3">
+			<LinearLayout android:layout_height="fill_parent" android:layout_width="fill_parent" android:id="@+id/load_balancer_buttons3">
 				<Button android:layout_height="wrap_content" android:layout_marginLeft="20dip" android:layout_marginTop="10dip" android:layout_gravity="left" android:layout_width="130dip" android:id="@+id/session_persistence_button" android:text="Disable Session Persistence"></Button>
 				<Button android:layout_marginTop="10dip" android:layout_marginLeft="10dip" android:layout_height="wrap_content" android:layout_gravity="left" android:layout_width="130dip" android:text="Connection Throttle" android:id="@+id/connection_throttle_button"></Button>
+			</LinearLayout>
+			<LinearLayout android:layout_width="fill_parent" android:layout_height="fill_parent" android:id="@+id/load_balancer_buttons4">
+				<Button android:layout_marginLeft="20dip" android:layout_height="wrap_content" android:layout_gravity="left" android:layout_width="130dip" android:layout_marginTop="10dip" android:id="@+id/access_control_button" android:text="Access Control"></Button>
 			</LinearLayout>
 		</LinearLayout>
 	</ScrollView>
